# konro

./: CMakeLists.txt  Dockerfile.eval  README.md
.github/workflows/: main.yml
applib/: CMakeLists.txt
cmake/: FindSensors.cmake
common/: CMakeLists.txt
common/include/: config.h  constants.h
common/src/: config.cpp
evaldocker/: konro-container.ini  konro.ini  run-exp.sh  victim.py
konrofeedback/: CMakeLists.txt  konrofeedback.cpp  konrofeedback.h
konrolib/: CMakeLists.txt  konrolib.cpp  konrolib.h
lib/: CMakeLists.txt
lib/httplib/: CMakeLists.txt
lib/json/: CMakeLists.txt
lib/mini/: CMakeLists.txt
peopledetect/: CMakeLists.txt  peopledetect.cpp
platformcontrol/: CMakeLists.txt  app.h  cgroupcontrol.cpp  cgroupcontrol.h  cgrouputil.cpp  cgrouputil.h  cpucontrol.cpp  cpucontrol.h  dir.cpp  dir.h  ecgroup.cpp  ecgroup.h  iplatformcontrol.cpp  keyvalueparser.cpp  keyvalueparser.h  memorycontrol.cpp  memorycontrol.h  numericutil.cpp  numericutil.h  numericvalue.cpp  numericvalue.h  pcexception.h  pidscontrol.cpp  tsplit.h
platformcontrol/controllers/: cpucontrol.cpp  cpucontrol.h  cpusetcontrol.cpp  cpusetcontrol.h  iocontrol.cpp  iocontrol.h  memorycontrol.cpp  memorycontrol.h  pidscontrol.cpp  pidscontrol.h
platformcontrol/tpc/: tpc.cpp
rm/: CMakeLists.txt  konro.ini.in
rm/include/: removeprocevent.h
rm/librmcommon/: CMakeLists.txt  addprocevent.h  app.h  baseevent.h  baseeventreceiver.cpp  baseeventreceiver.h  basethread.cpp  basethread.h  componenttemperature.h  concreteeventreceiver.cpp  concreteeventreceiver.h  coretemperature.h  cpucores.cpp  cpucores.h  cpusetvector.cpp  cpusetvector.h  dir.cpp  dir.h  eventbus.h  ieventreceiver.h  makepath.h  memoryinfo.cpp  memoryinfo.h  monitorevent.cpp  monitorevent.h  namespaces.cpp  namespaces.h  numericvalue.cpp  numericvalue.h  platformload.h  platformpower.h  platformtemperature.h  removeprocevent.h  sai.cpp  sai.h  simpleeventbus.h  threadname.h  threadsafequeue.h  timer.h  timerevent.h  (+1 more)
rm/librmcommon/events/: addevent.h  addprocevent.h  addrequestevent.h  baseevent.h  clearevent.h  execevent.h  exitevent.h  feedbackevent.h  feedbackrequestevent.h  forkevent.h  monitorevent.h  procfeedbackevent.h  proclistenerevent.h  proclistenerexecevent.h  proclistenerexitevent.h  proclistenerforkevent.h  removeevent.h  removeprocevent.h  securityevent.h  timerevent.h
rm/platformcontrol/: CMakeLists.txt  app.h  cgroupcontrol.cpp  cgroupcontrol.h  cgrouputil.h  dir.cpp  dir.h  icpucontrol.h  icpusetcontrol.h  iiocontrol.h  imemorycontrol.h  ipidscontrol.h  iplatformcontrol.h  keyvalueparser.cpp
rm/platformcontrol/cgroup/: cgroupcontrol.cpp  cgroupcontrol.h  cgrouputil.cpp  cgrouputil.h
rm/platformcontrol/cgroup/controllers/: cpucontrol.cpp  cpucontrol.h  cpusetcontrol.cpp  cpusetcontrol.h  iocontrol.cpp  iocontrol.h  memorycontrol.cpp  memorycontrol.h  pidscontrol.cpp  pidscontrol.h
rm/platformcontrol/controllers/: cpucontrol.cpp  cpucontrol.h  cpusetcontrol.cpp  cpusetcontrol.h  iocontrol.cpp  iocontrol.h  memorycontrol.cpp  memorycontrol.h  pidscontrol.h
rm/platformcontrol/tpc/: tpc.cpp
rm/platformcontrol/utilities/: keyvalueparser.cpp  keyvalueparser.h  makepath.h  numericvalue.cpp  numericvalue.h
rm/platformdescription/: CMakeLists.txt  coremapping.cpp  coremapping.h  cpucore.cpp  cpucore.h  platformdescription.cpp  platformdescription.h  processingunitmapping.cpp  processingunitmapping.h
rm/platformmonitor/: CMakeLists.txt  cputimedata.h  platformmonitor.cpp  platformmonitor.h
rm/policymanager/: CMakeLists.txt  appmapping.h  policymanager.cpp  policymanager.h  policytimer.cpp  policytimer.h
rm/policymanager/policies/: cpubasedpolicy.cpp  cpubasedpolicy.h  ibasepolicy.h  mincorespolicy.cpp  mincorespolicy.h  nopolicy.cpp  nopolicy.h  puprogressivepolicy.cpp  puprogressivepolicy.h  randpolicy.cpp  randpolicy.h  secstate.cpp  secstate.h  securityawarepolicy.cpp  securityawarepolicy.h
rm/resourcepolicies/: CMakeLists.txt  appinfo.cpp  appinfo.h  appmapping.cpp  appmapping.h  resourcemanagementpolicies.cpp  resourcemanagementpolicies.h  resourcepolicies.cpp  resourcepolicies.h
rm/resourcepolicies/policies/: ibasepolicy.cpp  ibasepolicy.h  nopolicy.cpp  nopolicy.h  randpolicy.cpp  randpolicy.h
rm/securitymonitor/: CMakeLists.txt  sai.h  securitymonitor.cpp  securitymonitor.h
rm/src/: konroapplication.cpp  konroapplication.h  konrohttp.cpp  konrohttp.h  konromanager.cpp  konromanager.h  main.cpp
rm/workloadmanager/: CMakeLists.txt  iprocobserver.h  proclistener.cpp  proclistener.h  workloadmanager.cpp  workloadmanager.h
testfeedback/: CMakeLists.txt  testfeedback.cpp
testhwloc/: CMakeLists.txt  testhwloc.cpp
testkonrolib/: CMakeLists.txt  testkonrolib.cpp
testnamespaces/: CMakeLists.txt  testnamespaces.cpp
testplatformcontrol/: CMakeLists.txt  test_cpusetcontrol.cpp  test_createcgroup.cpp  test_findcgrouppath.cpp  test_keyvalueparser.cpp  test_numericutil.cpp  test_split.cpp
testresourcepolicies/: CMakeLists.txt  test_threadsafequeue.cpp
testrmcommon/: CMakeLists.txt  testrmcommon.cpp
testsecuritymetric/: CMakeLists.txt  testsecuritymetric.cpp
testsecuritypolicy/: CMakeLists.txt  testsecuritypolicy.cpp
testsensors/: CMakeLists.txt  testsensors.cpp
testthreadsafequeue/: CMakeLists.txt  unittest.h
testtimer/: CMakeLists.txt  testtimer.cpp
workloadmanager/: CMakeLists.txt  proclistener.cpp  proclistener.h
